--- a/ImageMap4Avalonia/App.axaml
+++ b/ImageMap4Avalonia/App.axaml
@@ -1,6 +1,6 @@
 <Application xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             x:Class="ImageMap4Avalonia.App">
+             x:Class="ImageMap4.App">
     <Application.Styles>
         <FluentTheme Mode="Light"/>
     </Application.Styles>
